03/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool
  labels:
    app: multitool-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool-app
  template:
    metadata:
      labels:
        app: multitool-app
    spec:
      containers:
        - name: multitool
          image: praqma/network-multitool
          ports:
            - containerPort: 80
