03/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool
  labels:
    app: nginx-multitool
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-multitool
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: multitool-nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
        - name: multitool
          image: praqma/network-multitool
          ports:
            - containerPort: 80
      volumes:
        - name: multitool-nginx-config
          configMap:
            name: multitool-nginx-config
