03/service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: service-multitool
spec:
  selector:
    app: multitool-app
  ports:
    - name: multitool-web
      protocol: TCP
      port: 9091
      targetPort: 80
