03/service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
spec:
  selector:
    app: nginx-app
  ports:
    - name: nginx-web
      protocol: TCP
      port: 9092
      targetPort: 80
