03/service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: service-nodeport
spec:
  type: NodePort
  selector:
    app: nginx-multitool
  ports:
    - name: multitool-web
      protocol: TCP
      port: 9091
      targetPort: 80
      nodePort: 30007
    - name: nginx-web
      protocol: TCP
      port: 9092
      targetPort: 8080
      nodePort: 30008
