03/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-to-nginx-multitool
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-nginx
                port:
                  number: 9092
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: service-multitool
                port:
                  number: 9091
